--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -28,7 +28,7 @@ img{
 // Mixins
 
 @mixin hide-on-small {
-  display: none;
+  display: none!important;
 	@media #{$medium_mq} {
 		display: inherit;
 	}
